# fast_vec_search

./: .gitignore  amx_gemm.c  cblas_gemm.c  gemm.c  gemm.py  np_kmeans.py  running_c_from_python.py
search/: beir_evaluation.py  exa_search.c  main.py  pyproject.toml  test.py  tmp.py
search/encoder_model/: base.py  nomic_embed_encoder.py  utils.py
search/retriever/: base.py  exaai.py  models.py
search/search/: base.py  chromadb_search.py  exa_ai_retriever.py  py_exaai_search.py  qdrant_search.py
search/test_expectations/dense/: scifact.json
search/test_expectations/py_exa_ai/: scifact.json
search/test_expectations/qdrant/: scifact.json
search/text_preprocessor/: base.py  nomic_embed_preprocessor.py
